--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name="com.release.fast.ui.activity.SplashActivity"
+        <activity android:name="com.release.fast.ui.act.SplashActivity"
             android:theme="@style/AppLauncher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +20,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.release.fast.ui.act.LoginActivity"
+            android:launchMode="singleTop"
+            />
         <activity android:name="com.release.fast.MainActivity"
             android:launchMode="singleTask"
             />
-        <activity android:name="com.release.fast.ui.activity.WebActivity"
+        <activity android:name="com.release.fast.ui.act.WebActivity"
             android:launchMode="singleTop"
             />
     </application>
